@@ -21,6 +21,7 @@
 - Fix: [#18971] New Game does not prompt for save before quitting.
 - Fix: [#19025] Park loan behaves inconsistently with non-round and out-of-bounds values.
 - Fix: [#19026] Park loan is clamped to a 32-bit integer.
+- Fix: [#19068] Guests may not join queues correctly.
 - Fix: [#19091] [Plugin] Remote plugins in multiplayer servers do not unload properly.
 - Fix: [#19112] Clearing the last character in the Object Selection filter does not properly reset it.
 - Fix: [#19112] Text boxes not updated with empty strings in Track List, Server List, and Start Server windows.
